fix pre element wrap the line

--- a/app/assets/stylesheets/markdown.css.scss
+++ b/app/assets/stylesheets/markdown.css.scss
@@ -27,6 +27,9 @@
     font-weight: 500;
     color: #d14;
     line-height: 1.5;
+    white-space: pre;
+    word-wrap: normal;
+    overflow-x: scroll;
   }
 
   code {
